<resources>
    <string name="app_name">Safehub</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="maps">Lihat Peta</string>
    <string name="privacyPolicy">Privacy Policy and ToS</string>
    <string name="dailyCase">Daily Case</string>
    <string name="requestData">Parse Data</string>
    <string name="imageDesc">Safehub logo for content filling on Daily case app</string>
    <string name="positifDesc">Orang terkonfirmasi postif COVID-19</string>
    <string name="meninggalDesc">Orang menginggal\nakibat COVID-19</string>
    <string name="dirawatDesc">Orang dirawat\nakibat COVID-19</string>
    <string name="sembuhDesc">Orang sembuh dari COVID-19</string>
    <string name="rs">Rumah Sakit Terdekat</string>
    <string name="jmlODP">Jumlah ODP</string>
    <string name="jmlPDP">Jumlah PDP</string>
    <string name="search">Cari</string>
    <string name="searchHint">Cari nama tempat</string>
    <string name="signIn">Sign In Huawei ID</string>
    <string name="changeId">Change Huawei ID Account</string>
    <string name="cancelAuth">Cancel Autorization</string>
</resources>