<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginHorizontal="10dp"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/privacyPolicy"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/rectanglelogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="12"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <View
            android:background="@color/lighrgrey"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/tanggal"
            android:textColor="@color/lighrgrey"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="Hari ini Kamis, 7 Juli 2021"
            android:layout_weight="6"/>

        <View
            android:background="@color/lighrgrey"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/round_rect_shape"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:padding="30dp">

        <TextView
            android:id="@+id/DataHarianCovid_jmlpositif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:text="323232"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.335" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positifDesc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="12"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/red_rect_shape"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/round_rect_shape"
            android:orientation="vertical"
            android:layout_weight="6"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:padding="25dp">

            <TextView
                android:id="@+id/DataHarianCovid_jmlmeninggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:text="323232"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.335" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meninggalDesc" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/yellow_rect_shape"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/round_rect_shape"
            android:orientation="vertical"
            android:layout_weight="6"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:padding="25dp">

            <TextView
                android:id="@+id/DataHarianCovid_jmldirawat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:text="323232"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.335" />

            <TextView
                android:id="@+id/positifdesc"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dirawatDesc" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/green_rect_shape"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/round_rect_shape"
        android:orientation="vertical"
        android:layout_marginVertical="5dp"
        android:padding="25dp">

        <TextView
            android:id="@+id/DataHarianCovid_jmlsembuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:text="323232"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.335" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sembuhDesc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/rs" />

        <Button
            android:id="@+id/maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/babyblue"
            android:textColor="@color/white"
            android:background="@drawable/round_rect_shape"
            android:text="@string/maps" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="12"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/red_rect_shape2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/round_rect_shape"
            android:orientation="vertical"
            android:layout_weight="6"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:padding="25dp">

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="@string/jmlODP" />

            <TextView
                android:id="@+id/DataSemua_ODP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:text="323232"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.335" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/yellow_rect_shape2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/round_rect_shape"
            android:orientation="vertical"
            android:layout_weight="6"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:padding="25dp">

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="@string/jmlPDP" />

            <TextView
                android:id="@+id/DataSemua_PDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:text="323232"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.335" />



        </LinearLayout>
    </LinearLayout>



<!--    <TextView-->
<!--        android:id="@+id/MainTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.204" />-->

    <!--    <TextView-->
<!--        android:id="@+id/DailyTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


<!--    <TextView-->
<!--        android:id="@+id/DataSemua"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.599" />-->

    <!--    <Button-->
<!--        android:id="@+id/privacyPolicy"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="256dp"-->
<!--        android:text="@string/privacyPolicy"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/dailyCase"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="68dp"-->
<!--        android:text="@string/dailyCase"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/privacyPolicy"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/maps"-->
<!--        app:layout_constraintVertical_bias="0.147" />-->
</LinearLayout>